--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,9 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} {% block body %}
 
-<div class="d-flex justify-content-between margenes">
+<div class="row ustify-content-center justify-content-md-start">
   <!-- Izquierda -->
-  <div class="card margen-iz" style="width: 20rem;">
-    <div class="card text-white bg-danger mb-2" style="max-width: 20rem;">
+  <div class=" col-xs-6 col-md-3 ">
+    <div class="card text-white bg-danger mb-2">
       <div class="card-header">¡Peligro!</div>
       <div class="card-body">
         <h4 class="card-title">Danger card title</h4>
@@ -14,7 +14,7 @@
       </div>
     </div>
     {% if session['name'] %}
-    <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+    <div class="card text-white bg-success mb-3">
       <div class="card-header">¡Exito!</div>
       <div class="card-body">
         <h4 class="card-title">Se ha iniciado sesión correctamente</h4>
@@ -22,7 +22,7 @@
       </div>
     </div>
     {% endif %}
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+    <div class="card text-white bg-dark mb-3">
       <div class="card-header">Header</div>
       <div class="card-body">
         <h4 class="card-title">Dark card title</h4>
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+    <div class="card text-white bg-primary mb-3">
       <div class="card-header">Aviso:</div>
       <div class="card-body">
         <h4 class="card-title">Primary card title</h4>
@@ -43,7 +43,7 @@
         </p>
       </div>
     </div>
-    <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+    <div class="card text-white bg-warning mb-3">
       <div class="card-header">Alerta</div>
       <div class="card-body">
         <h4 class="card-title">Warning card title</h4>
@@ -56,27 +56,25 @@
   </div>
 
   <!-- Centro -->
-  <div class="container colorPrueba">centtro</div>
+  <div class="col-xs-6 col-md-6 colorPrueba">centtro</div>
   <!-- Derecha -->
-  <div>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
-      </div>
+  <div class="col-xs-6 col-md-3  ">
+    <img src="..." class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
     </div>
   </div>
 </div>
