--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,7 +69,9 @@
     </nav>
   </header>
   <body>
-    {% block body %} {% endblock %}
+    <div class="container">
+      {% block body %} {% endblock %}
+    </div>
   </body>
   <!-- Optional JavaScript -->
   {% block script %} {% endblock %}
