--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -5,9 +5,8 @@
 <link href="../static/css/calendar/list.css" rel="stylesheet" />
 
 {% endblock %} {% block body %}
-<div class="container">
-  <div id="calendar"></div>
-</div>
+<div id="calendar"></div>
+
 {% endblock %} {% block script %}
 
 <script src="../static/js/calendar/vendorRrule.js"></script>
@@ -23,32 +22,42 @@
     var calendarEl = document.getElementById("calendar");
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
-      locale: "es",
-      plugins: ["interaction", "dayGrid", "timeGrid", "list", "rrule"],
+      plugins: ["dayGrid", "timeGrid", "list", "interaction"],
       header: {
         left: "prev,next today",
         center: "title",
-        right: "dayGridMonth,timeGridWeek,timeGridDay,listMonth"
+        right: "dayGridMonth,timeGridWeek,timeGridDay,listWeek"
       },
-      //defaultDate: "2019-06-12",
+      defaultDate: "2019-06-12",
+      navLinks: true, // can click day/week names to navigate views
       editable: true,
-      events: "../php/eventos.php",
-      /*events: [
+      eventLimit: true, // allow "more" link when too many events
+      events: [
         {
-          title: "rrule event",
-          rrule: {
-            dtstart: "2019-06-09T13:00:00",
-            // until: '2019-06-01',
-            freq: "weekly"
-          },
-          duration: "02:00"
+          title: "All Day Event",
+          start: "2019-06-01"
+        },
+        {
+          groupId: 999,
+          title: "Repeating Event",
+          start: "2019-06-09T16:00:00"
+        },
+        {
+          groupId: 999,
+          title: "Repeating Event",
+          start: "2019-06-16T16:00:00"
+        },
+        {
+          title: "Meeting",
+          start: "2019-06-12T10:30:00",
+          end: "2019-06-12T12:30:00"
+        },
+        {
+          title: "Click for Google",
+          url: "http://google.com/",
+          start: "2019-06-28"
         }
-      ],*/
-      eventClick: function(arg) {
-        if (confirm("delete event?")) {
-          arg.event.remove();
-        }
-      }
+      ]
     });
 
     calendar.render();
