--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -32,32 +32,7 @@
       navLinks: true, // can click day/week names to navigate views
       editable: true,
       eventLimit: true, // allow "more" link when too many events
-      events: [
-        {
-          title: "All Day Event",
-          start: "2019-06-01"
-        },
-        {
-          groupId: 999,
-          title: "Repeating Event",
-          start: "2019-06-09T16:00:00"
-        },
-        {
-          groupId: 999,
-          title: "Repeating Event",
-          start: "2019-06-16T16:00:00"
-        },
-        {
-          title: "Meeting",
-          start: "2019-06-12T10:30:00",
-          end: "2019-06-12T12:30:00"
-        },
-        {
-          title: "Click for Google",
-          url: "http://google.com/",
-          start: "2019-06-28"
-        }
-      ]
+      events: { url: "data" }
     });
 
     calendar.render();
