--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -20,7 +20,6 @@
 <script>
   document.addEventListener("DOMContentLoaded", function() {
     var calendarEl = document.getElementById("calendar");
-
     var calendar = new FullCalendar.Calendar(calendarEl, {
       plugins: ["dayGrid", "timeGrid", "list", "interaction"],
       header: {
@@ -28,13 +27,13 @@
         center: "title",
         right: "dayGridMonth,timeGridWeek,timeGridDay,listWeek"
       },
-      defaultDate: "2019-06-12",
+      //defaultDate: { url: "today" },
+
       navLinks: true, // can click day/week names to navigate views
       editable: true,
       eventLimit: true, // allow "more" link when too many events
       events: { url: "data" }
     });
-
     calendar.render();
   });
 </script>
