--- a/static/css/login.css
+++ b/static/css/login.css
@@ -63,9 +63,7 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type="button"],
-input[type="submit"],
-input[type="reset"] {
+input[type="button"], input[type="submit"], input[type="reset"] {
   background-color: #56baed;
   border: none;
   color: white;
@@ -87,15 +85,11 @@ input[type="reset"] {
   transition: all 0.3s ease-in-out;
 }
 
-input[type="button"]:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover {
+input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover {
   background-color: #428bca;
 }
 
-input[type="button"]:active,
-input[type="submit"]:active,
-input[type="reset"]:active {
+input[type="button"]:active, input[type="submit"]:active, input[type="reset"]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
@@ -124,6 +118,28 @@ input {
   border-radius: 5px 5px 5px 5px;
 }
 
+select {
+  background-color: #f6f6f6;
+  border: none;
+  color: #0d0d0d;
+  padding: 15px 32px;
+  text-align: center;
+  text-align-last: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  width: 85%;
+  border: 2px solid #f6f6f6;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
 input:focus {
   background-color: #fff;
   border-bottom: 2px solid #5fbae9;
@@ -133,9 +149,19 @@ input:placeholder {
   color: #cccccc;
 }
 
+select:focus {
+  background-color: #fff;
+  border-bottom: 2px solid #5fbae9;
+}
+
+select:placeholder {
+  color: #cccccc;
+}
+
 /* ANIMATIONS */
 
 /* Simple CSS3 Fade-in-down Animation */
+
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
@@ -172,6 +198,7 @@ input:placeholder {
 }
 
 /* Simple CSS3 Fade-in Animation */
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -180,6 +207,7 @@ input:placeholder {
     opacity: 1;
   }
 }
+
 @-moz-keyframes fadeIn {
   from {
     opacity: 0;
@@ -188,6 +216,7 @@ input:placeholder {
     opacity: 1;
   }
 }
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -202,11 +231,9 @@ input:placeholder {
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
-
   -webkit-animation-fill-mode: forwards;
   -moz-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-
   -webkit-animation-duration: 1s;
   -moz-animation-duration: 1s;
   animation-duration: 1s;
@@ -237,6 +264,7 @@ input:placeholder {
 }
 
 /* Simple CSS3 Fade-in Animation */
+
 .underlineHover:after {
   display: block;
   left: 0;
