--- a/templates/evento.html
+++ b/templates/evento.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 
+{% block head %}
 
+<link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
+{% endblock %}
 {% block body %}
 <div class="modal-body">
 
@@ -16,6 +19,39 @@
 
 </div>
 
+
+
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Mensaje -->
+    <div class="fadeIn first">
+      {% for mensaje in mensaje %}
+      <div class="card text-white bg-{{ mensaje.tipo }} mb-3 ">
+        <div class="card-header">{{ mensaje.titulo }}</div>
+        <div class="card-body">
+          <h4 class="card-title">{{ mensaje.author }}</h4>
+          <p class="card-text">{{ mensaje.mensaje }}</p>
+        </div>
+
+        {% endfor %}
+      </div>
+
+      <!-- Login Form -->
+      <form action="/add_event" method="POST" id="event">
+        <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" />
+        <select class="fadeIn second" name="color">
+          <option value="#ff0000">Rojo</option>
+          <option value="#00ff00">Verde</option>
+          <option value="#ffff00">Amarillo</option>
+          <option value="#81d6fe">Azul</option>
+        </select>
+        <input type="datetime-local" id="login" class="fadeIn second" name="start" placeholder="Email" />
+        <input type="datetime-local" id="login" class="fadeIn third" name="end" placeholder="Contraseña" />
+        <input type="submit" class="fadeIn fourth" value="Guardar" />
+      </form>
+    </div>
+  </div>
+</div>
 
 
 
