--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,15 @@
 body {
-  background: #076585;
+  margin: 0;
+  padding: 0;
+  background: url(../img/Fondo1b.jpeg) no-repeat center top fixed;
+  background-size: cover;
+  font-family: sans-serif;
+}
+
+#calendar {
+  background: #428bca;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #fff, #076585);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #fff, #076585);
+  background: linear-gradient(to top, #fff, #56baed);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
