--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -27,7 +27,7 @@
 
             <!-- Login Form -->
             <form action="/add_event" method="POST">
-              <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" />
+              <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
               {{ lista | safe }}
               <select name="color">
                 <option value="#ff0000">Rojo</option>
