--- a/static/css/login.css
+++ b/static/css/login.css
@@ -63,7 +63,9 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type="button"], input[type="submit"], input[type="reset"] {
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
   background-color: #56baed;
   border: none;
   color: white;
@@ -85,11 +87,15 @@ input[type="button"], input[type="submit"], input[type="reset"] {
   transition: all 0.3s ease-in-out;
 }
 
-input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover {
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover {
   background-color: #428bca;
 }
 
-input[type="button"]:active, input[type="submit"]:active, input[type="reset"]:active {
+input[type="button"]:active,
+input[type="submit"]:active,
+input[type="reset"]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
