--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -76,9 +76,9 @@
     </nav>
 
     <!-- Centro -->
-
-    {% block conten %} {% endblock %}
-
+    <div class="mt-4 ml-4 mr-4">
+      {% block conten %} {% endblock %}
+    </div>
     <!-- JavaScript -->
 
     <script
