--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
   <!-- Izquierda -->
   <div class="col-auto col-md-2 ">
     {% if primer %}
-    <div class="card text-white bg-success mb-2 fadeInDown ">
+    <div class="card text-white bg-success mb-2 fadeInDown fadeIn first">
       <div class="card-header">¡Exito!</div>
       <div class="card-body">
         <h4 class="card-title">Se ha iniciado sesión correctamente</h4>
