--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -33,8 +33,8 @@
                 <option value="#ffff00">Amarillo</option>
                 <option value="#81d6fe">Azul</option>
               </select>
-              <input type="datetime-local" id="login" class="fadeIn second" name="start" placeholder="Email" />
-              <input type="datetime-local" id="login" class="fadeIn third" name="end" placeholder="Contraseña" />
+              <input type="datetime-local" id="login" class="fadeIn second" name="start" placeholder="" />
+              <input type="datetime-local" id="login" class="fadeIn third" name="end" placeholder="" />
               <input type="submit" class="fadeIn fourth" value="Guardar" />
             </form>
           </div>
@@ -63,9 +63,10 @@
       <div class="modal-body">
 
         Usuario : {{ lista | safe }} <br />
-        Inicio: <input type="text" id="txtFechaI" name="txtFechaI"><br>
-        Fin: <input type="text" id="txtFechaF" name="txtFechaF"><br />
-        Color: <input type="color" id="txtColor" value="#ff0000" name="txtColor"><br />
+        Inicio: <input type="datetime-local" id="2" name="start" />
+        prueba: <input type="text" id="colorEvento" name="idEvento">
+        Fin: <input type="datetime-local" id="txtFechaF" name="end" />
+        Color: <input type="color" id="colorEvento" name="txtColor"><br />
 
 
       </div>
@@ -77,7 +78,7 @@
         <button type="button" class="btn btn-danger">
           Borrar Evento
         </button>
-        <button type="button" class="btn btn-success">Guardar cambios</button>
+        <button type="button" id="btnGuardar" class="btn btn-success">Guardar cambios</button>
       </div>
     </div>
   </div>
@@ -119,18 +120,42 @@
       eventClick: function (info, jsEvent, view) {
 
         $("#tituloEvento").html(info.event.title);
-        $("#inicioEvento").html(info.event.start);
-        $("#finEvento").html(info.event.end);
+        $("#inicioEvento").val(info.event.start);
+        $("#finEvento").val(info.event.end);
+        $("#colorEvento").val(info.jsEvent.color);
+        $("#idEvento").val(info.event.id);
         $("#exampleModal").modal();
+        //FechaHora = info.event.start.toString()
+        //FechaHora = FechaHora.split(" ");
+
+
+        //$("#txtFechaI").val(typeof (info.start));
+        //$("#txtHoraI").val(FechaHora[1]);
+
+        //document.getElementById("txtFechaI").value = info.event.start
         //lert("Event: " + info.event.title);
         //alert("Coordinates: " + info.jsEvent.pageX + "," + info.jsEvent.pageY);
         //alert("View: " + info.view.type);
 
         // change the border color just for fun
         //info.el.style.borderColor = "red";
+
       }
     });
     calendar.render();
   });
+</script>
+
+<script>
+  $("#btnAgregar").click(function () {
+
+    var Evento = {
+      title: $("#textTitulo").val(),
+      start: $("#txtFechaI").val(),
+      end: $("#txtFechaF").val(),
+      color: $("#txtColor").val(),
+
+    });
+
 </script>
 {% endblock %}
